* Added shortcut to unlink is cursor is inside a word with hyperlink. CMD + SHIFT + K * Fixed the window jumping problem with an arbitrary setTimeout of 100.

--- a/src/components/toolbar.scss
+++ b/src/components/toolbar.scss
@@ -93,8 +93,8 @@ $toolbar-color: #323845;
 }
 
 .md-editor-toolbar-edit-link {
-  padding: 2px 5px;
-  font-size: 0.6em;
+  padding: 4px 5px;
+  font-size: 0.8em;
   width: 320px;
 
   a {
